# Simanalysis

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_RESPONSE.md  CONTRIBUTING.md  DBPF_ENHANCEMENT_SUMMARY.md  DBPF_IMPLEMENTATION_STATUS.md  Dockerfile  FEASIBILITY_ANALYSIS.md  FUTURE_FEATURES.md  IMPLEMENTATION_PLAN_V3.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_STATUS.md  LICENSE  PHASE_3_IMPLEMENTATION_PLAN.md  PROJECT_STATUS_ANALYSIS.md  PROJECT_STRUCTURE.md  README.md  REQUIREMENTS_VERIFICATION.md  REVIEW_CLARIFICATION.md  SETUP_SUMMARY.md  SPRINT_1_COMPLETION_SUMMARY.md  TECHNICAL_SPECIFICATION.md  USAGE_EXAMPLES.md  coverage.xml  debug_save_header.py  docker-compose.yml  mkdocs.yml  mypy.ini  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  ruff.toml  (+7 more)
.codex/: config.json  prompts.md
.github/workflows/: build_standalone.yml  ci.yml  release.yml  tests.yml
docs/: DBPF_FORMAT.md  DOCKER.md  STATUS.md  architecture.md  index.md  public-v3-workplan.md  release-security.md  release-signing-runbook.md  release-smoke.md  simanalysis-public-v3-presentation.html
docs/api/: exceptions.md  models.md  overview.md
docs/api/analyzers/: dependency_detector.md  dependency_graph.md  mod_analyzer.md
docs/api/detectors/: base.md  resource_conflicts.md  tuning_conflicts.md
docs/api/parsers/: dbpf.md  script.md  tuning.md
docs/api/scanners/: mod_scanner.md
docs/archive/status/: CODE_REVIEW_RESPONSE_2025-review.md  DBPF_ENHANCEMENT_SUMMARY_2025-10-24.md  DBPF_IMPLEMENTATION_STATUS_2025-10-24.md  IMPLEMENTATION_STATUS_2025-12-21.md  README.md  REQUIREMENTS_VERIFICATION_2025-10-24.md  REVIEW_CLARIFICATION_2025-10-22.md  SETUP_SUMMARY_2025-10-21.md  SPRINT_1_COMPLETION_SUMMARY_2025-10-21.md  TECHNICAL_SPECIFICATION_2025-12-21.md
docs/examples/: advanced.md  basic.md  cicd.md
docs/getting-started/: basic-usage.md  installation.md  quick-start.md
docs/superpowers/: 2026-05-30-desktop-doctor-validation.md  2026-05-30-ui-crash-autopsy-validation.md  2026-05-31-live-monitoring-validation.md  2026-05-31-treatment-autobisect-validation.md  2026-06-02-live-monitoring-ui-validation.md  2026-06-04-local-inventory-v1-validation.md  2026-06-04-world-model-v1-validation.md
docs/superpowers/plans/: 2026-05-29-crash-autopsy-status-aware.md  2026-05-29-crash-autopsy.md  2026-05-29-tauri-stdio-desktop.md  2026-05-30-desktop-doctor.md  2026-05-30-ui-crash-autopsy.md  2026-05-31-live-monitoring.md  2026-05-31-treatment-autobisect.md  2026-06-02-live-monitoring-ui.md  2026-06-04-local-inventory-v1.md  2026-06-11-cleanup-planner-v1.md  2026-06-12-operating-table-v1.md
docs/superpowers/specs/: 2026-05-29-crash-autopsy-design.md  2026-05-29-crash-autopsy-status-aware-design.md  2026-05-29-tauri-stdio-desktop-design.md  2026-05-30-desktop-doctor-design.md  2026-05-30-treatment-autobisect-design.md  2026-05-30-ui-crash-autopsy-design.md  2026-05-31-live-monitoring-design.md  2026-06-01-live-monitoring-ui-design.md  2026-06-04-local-inventory-v1-design.md  (+2 more)
docs/user-guide/: analyzing-mods.md  dependency-analysis.md  exporting-reports.md  save-file-analysis.md  troubleshooting.md  understanding-conflicts.md
examples/: README.md  advanced_usage.py  basic_usage.py
scripts/: build-sidecar.sh  release_security.py  release_smoke.py
src/: __init__.py  analyzer.py  dbpf_parser.py  main.py  script_metadata.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/simanalysis/: __init__.py  __main__.py  __version__.py  analyzer.py  cache.py  cache_doctor.py  classification.py  cleanup.py  cli.py  dbpf_parser.py  doctor.py  exceptions.py  fix_actions.py  fix_planner.py  interactive_tui.py  inventory.py  live_monitoring.py  load_order.py  main.py  master_plan.py  models.py  operating_table.py  parallel.py  patch_day.py  save_protector.py  script_metadata.py  script_security.py  serialization.py  tray_protector.py  treatment.py  tui.py  update_desk.py  world.py
src/simanalysis/web/: api.py  (+1 more)
tests/: conftest.py  test_analyzer.py  test_cache.py  test_cli.py  test_conflicts.py  test_dbpf_backends.py  test_dbpf_reader.py  test_dbpf_real.py  test_dependency_detector.py  test_dependency_graph.py  test_explain.py  test_inventory.py  test_models.py  test_parallel.py  test_report_smoke.py  test_tuning_diff.py  test_tuning_graph.py  test_xml_loader.py
tests/fixtures/: README.md  build_real_corpus.py  create_fixtures.py  s4tk_resource_types_snapshot.json  xml_samples.py
tests/integration/: test_real_fixtures.py  test_web_api.py  test_websocket.py
tests/performance/: __init__.py  test_dbpf_benchmarks.py
tests/real/: test_real_corpus_contract.py
tests/unit/: test_bridge_commands.py  test_bridge_main.py  test_bridge_protocol.py  test_cache_doctor.py  test_classification.py  test_cleanup.py  test_cli.py  test_dependency_truth.py  test_doctor.py  test_fix_actions.py  test_fix_planner.py  test_inventory.py  test_live_monitoring.py  test_load_order.py  test_master_plan.py  test_models.py  test_operating_table.py  test_patch_day.py  test_release_security.py  test_release_smoke.py  test_save_protector.py  test_script_security.py  test_serialization.py  test_tray_protector.py  test_treatment.py  test_update_desk.py  test_world.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vite.config.test.js
web/src/: App.jsx  TrayResults.jsx  api.js  cacheDoctorApiModel.js  cacheDoctorApiModel.test.js  cleanupApiModel.js  cleanupApiModel.test.js  doctorApiModel.js  doctorApiModel.test.js  index.css  inventoryApiModel.js  inventoryApiModel.test.js  main.jsx  operatingTableApiModel.js  operatingTableApiModel.test.js  patchDayApiModel.js  patchDayApiModel.test.js  saveProtectorApiModel.js  saveProtectorApiModel.test.js  tauriRuntime.js  tauriRuntime.test.js  trayProtectorApiModel.js  trayProtectorApiModel.test.js  updateDeskApiModel.js  updateDeskApiModel.test.js
(+166 files in other folders)
